Changelog
=========

1.0b11 (unreleased)
-------------------

- Declare z3c.form and zope.schema as minimum version dependencies in setup.py
  in case people use a different KGS.
  [timo]

- Add and update es and eu l10ns.
  [dukebody, on behalf of erral]

- Ajaxify comment deletion and approval.
  [thomasdesvenain]
  
- New feature: As a logged-in user, I can enable/disable email notification of 
  additional comments on this content object.
  [timo]

- Disable the plone.app.registry check on schema elements, so no error is
  raised on upgrades. This fixes https://dev.plone.org/plone/ticket/11195.
  [timo]

- Remove the too generic id attribute of the comment form.
  [timo]

- Fixed handling of non-ascii member data, like fullname and email.
  [hannosch]


1.0b10 (2010-10-15)
-------------------

- Fixed "global name 'WrongCaptchaCode' is not defined" if norobots captcha,
  but no other validation package is installed.
  [naro]

- Check if there is a 'pending' review state in the current workflow for 
  comments instead of just checking for the 'comment_review_workflow'. This 
  allows integrators to use a custom review workflow. This fixes 
  http://dev.plone.org/plone/ticket/11184.
  [timo]

- fixed plone-it.po (improper language code ('en' instead of 'it'))
  [ajung]


1.0b9 (2010-10-07)
------------------

- Replace the can_manage method with a can_review method that checks the 
  'Review comments' permission. This fixes 
  http://dev.plone.org/plone/ticket/11145.
  [timo]

- Fix moderation actions (publish, delete) in the moderation view with virtual 
  hosts. This is a replacement for http://dev.plone.org/plone/changeset/35608.
  [timo]

- Do not show two "login to add comments" buttons when there are no comments
  yet. This fixes http://plone.org/products/plone.app.discussion/issues/12.
  [timo]


1.0b8 (2010-10-04)
------------------

- Apply the comment viewlet template and styles to the new title-less comments.